sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:21: error: ';' expected but 'if' found.
		}	if (trié==false) {return -1}
                        ^